# ISAMV

./: README.md
DataCreation/ClusteringTracking/: create_both_pointclouds_align_rs_therm.py  create_both_pointclouds_no_align_rs_therm.py  create_rs_ptc.py  create_stereo_ptc.py  visualize_ptc.py
DataCreation/DeepStereoVision/: create_disparities_depths.py  create_disparities_inputs_left - Copy.py  create_disparities_inputs_left _new_format - Copy.py  create_disparities_inputs_left _new_format.py  create_disparities_inputs_right _new_format.py  create_disparities_inputs_right.py  create_disparity_left_right.py  fast_quantile_filter.py
RSPointCloudClusteringTracking-final-experiments/: MotionBasedMultiObjectTrackingExample.m  createNewTracks.m  deleteLostTracks.m  detectObjects.m  detectionToTrackAssignment.m  displayTrackingResults.m  initializeTracks.m  main.m  main2.m  mySetupSystemObjects.m  myVideoReader.m  predictNewLocationsOfTracks.m  updateAssignedTracks.m  updateUnassignedTracks.m
RSPointcloudClustering-first-experiments/: clustering2.py  create_mutiple_pointclouds.py  double_normed_feature_clustering.py  rgbd_clustering.py  single_feature_clustering.py
RS_Pointcloud_Clustering/: clustering.py  double_feature_clustering.py  single_feature_clustering.py  single_norm_feature_clustering.py
RealSensePointCloud/: rs_3d.py
StereoThermalSetup/: callibrtion_find_best.m  check_single.m  detect_chessboard_single_cam.m  disparity_SGM.py  filter_sequences_by_depth.py  find_best.m  find_best_single.m  find_best_single_stereo.m  gather_best.py  gather_best_single.py  inv_images.m  norm_images.m  post_rename.py  sing_callibrtion_find_best.m  single_calib.m  single_stereo_callibrtion_find_best.m  stereo_calib.m  stereo_calib_ex.m  stereo_depth.m  sync_by_timestamps.py  sync_by_timestamps_w_delete.py.py  to_png.py  visualize_ptcs.m
StereoThermalSetup/calibration/: BundleAdjustement.py  SIFT.py  SIFT_old.py  create_disparities_inputs_left_new_format_5+.py  create_disparities_inputs_right_new_format_5+.py
StereoVision/Classical/: disparity_BM.py  disparity_BM_filter.py  disparity_SGM.py  disparity_SGM_filter.py  stereo_depth.m
StereoVision/Deep/: DerProjMain.py  collab_run.ipynb  dataloader_check.py  dataloaders.py  deep_unsupervised_seg.py  deep_unsupervised_seg_2.py  depth_learn_from_disparsity.py  eval_trained_model.py  main.py  main_FADNet_single.py  main_psm.py  main_rn_disp_to_depth_train_test_split.py  main_with_indices.py  main_with_indices_train_test_split.py  main_worked.py  mean-shift.py  requirements.txt  ‏‏main_with_indices_copy.py
StereoVision/Deep/layers_package/resample2d_package/: setup.py
StereoVision/Deep/losses/: multiscaleloss.py
StereoVision/Deep/networks/: Autoencoder.py  Autoencoder_CIFAR.py  DerivProjModels.py  DispNetC_single.py  DispNetRes_single.py  FADNet.py  FADNet_single.py  FadNetSS.py  IntrinsicsNet.py  MyUnsupervisedModel.py  UNet.py  VOFlowNet.py  deriveable_projection.py  dp_utils.py  stackhourglass.py  submodules.py
StereoVision/Deep/utils/: preprocess.py
TechEnvSetup/: CMakeLists.txt  main.cpp  main.cpp.bak  main2.cpp.bak  main3.cpp  main3.cpp.bak  main5.cpp  main5.cpp.bak  main6.cpp  main_v2.cpp  my_align.cpp  my_align_rs_t.cpp  resize.py  rs-callback.cpp  stb.cpp  to_png.py
